--- a/openai-api/requirements.txt
+++ b/openai-api/requirements.txt
@@ -11,6 +11,7 @@ click==8.1.7
 dataclasses-json==0.6.3
 exceptiongroup==1.2.0
 Flask==3.0.0
+Flask-Cors==4.0.0
 frozenlist==1.4.0
 greenlet==3.0.2
 idna==3.6
@@ -29,6 +30,7 @@ numpy==1.26.2
 packaging==23.2
 pydantic==2.5.2
 pydantic_core==2.14.5
+python-dotenv==1.0.0
 PyYAML==6.0.1
 requests==2.31.0
 sniffio==1.3.0
