--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,26 @@ services:
   db:
     build: ./postgres
     container_name: postgres
-    ports:
-      - "5432:5432"
+    restart: always
+    expose:
+      - "5432"
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=postgres
     volumes:
       - ./postgres/db_seed_data:/data
-    
+  ui:
+    build: ./web-ui
+    container_name: ui
+    restart: always
+    ports: 
+      - "80:80"
+    environment:
+      - NODE_ENV=production
+  api:
+    build: ./openai-api
+    container_name: api
+    restart: always
+    ports: 
+      - "5000:5000"
