--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -4,6 +4,8 @@ ADD scripts/1_init.sql /docker-entrypoint-initdb.d
 
 ADD scripts/2_copy.sql /docker-entrypoint-initdb.d
 
+ADD scripts/3_init.sql /docker-entrypoint-initdb.d
+
 RUN chmod a+r /docker-entrypoint-initdb.d/*
 
 EXPOSE 5432
