--- a/openai-api/requirements.txt
+++ b/openai-api/requirements.txt
@@ -28,6 +28,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 numpy==1.26.2
 packaging==23.2
+psycopg2-binary==2.9.9
 pydantic==2.5.2
 pydantic_core==2.14.5
 python-dotenv==1.0.0
