--- a/openai-api/requirements.txt
+++ b/openai-api/requirements.txt
@@ -16,10 +16,12 @@ charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
 chromadb==0.3.29
 click==8.1.7
+clickhouse-connect==0.6.22
 coloredlogs==15.0.1
 dataclasses-json==0.6.3
 Deprecated==1.2.14
 distro==1.8.0
+duckdb==0.9.2
 emoji==2.9.0
 exceptiongroup==1.2.0
 fastapi==0.85.1
@@ -36,6 +38,7 @@ greenlet==3.0.2
 grpcio==1.60.0
 gunicorn==21.2.0
 h11==0.14.0
+hnswlib==0.8.0
 httpcore==1.0.2
 httptools==0.6.1
 httpx==0.25.2
@@ -55,6 +58,7 @@ langchain-core==0.0.12
 langdetect==1.0.9
 langsmith==0.0.69
 lxml==4.9.3
+lz4==4.3.2
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 mmh3==4.0.1
@@ -79,13 +83,14 @@ opentelemetry-semantic-conventions==0.42b0
 opentelemetry-util-http==0.42b0
 overrides==7.4.0
 packaging==23.2
+pandas==2.1.4
 posthog==3.1.0
 protobuf==4.25.1
 psycopg2-binary==2.9.9
 pulsar-client==3.3.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
-pydantic==1.9
+pydantic==1.10.8
 pydantic_core==2.14.5
 pypdf==3.17.2
 PyPika==0.48.9
@@ -93,6 +98,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-iso639==2023.12.11
 python-magic==0.4.27
+pytz==2023.3.post1
 PyYAML==6.0.1
 rapidfuzz==3.5.2
 regex==2023.10.3
@@ -107,11 +113,13 @@ starlette==0.20.4
 sympy==1.12
 tabulate==0.9.0
 tenacity==8.2.3
+tiktoken==0.5.2
 tokenizers==0.15.0
 tqdm==4.66.1
 typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.9.0
+tzdata==2023.3
 unstructured==0.11.2
 urllib3==1.26.18
 uvicorn==0.24.0.post1
@@ -123,3 +131,4 @@ Werkzeug==3.0.1
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.17.0
+zstandard==0.22.0
