--- a/openai-api/requirements.txt
+++ b/openai-api/requirements.txt
@@ -53,8 +53,10 @@ joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
 kubernetes==28.1.0
-langchain==0.0.348
-langchain-core==0.0.12
+langchain==0.0.350
+langchain-community==0.0.3
+langchain-core==0.1.1
+langchain-experimental==0.0.47
 langdetect==1.0.9
 langsmith==0.0.69
 lxml==4.9.3
